--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -37,7 +37,7 @@ Review {{ community.name }} Applicants
 				<th scope="col">Applicant Name</th>
 				<th scope="col">Number of days available</th>
 				<th scope="col">Number of contributions</th>
-				<th scope="col">Application submitted?</th>
+				<th scope="col">Application status</th>
 			</tr>
 			</thread>
 		{% for project in projects %}
@@ -58,7 +58,9 @@ Review {{ community.name }} Applicants
 							<td>{{ applicant.public_name }}</td>
 							<td>{{ tcs.longest_period_free }} / {{ tcs.internship_total_days.days }} days</td>
 							<td>{{ application.number_contributions }}</td>
-							<td>{% if application.submitted_application %}Yes{% else %}No{% endif %}</td>
+							<td>{% if application.submitted_application and not application.withdrew_application %}Submitted
+								{% elif application.submitted_application and application.withdrew_application %}Withdrawn
+								{% else %} - {% endif %}</td>
 						</tr>
 					{% endwith %}
 				{% endfor %}
