--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -39,6 +39,7 @@ Then subscribe them using the following links (anyone already subscribed won't b
 			<th scope="col">Project Approved?</th>
 			<th scope="col">Number Applicants With Contribution</th>
 			<th scope="col">Number Final Applications</th>
+			<th scope="col">Number Withdrawn Final Applications</th>
 		</tr>
 		</thread>
 	{% for p in participations %}
@@ -47,6 +48,7 @@ Then subscribe them using the following links (anyone already subscribed won't b
 					<td><a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=p.community.slug %}">{{ p.community.name }}</a></td>
 					<td>{% if p in approved_participations %}Approved{% else %}Pending{% endif %}</td>
 					<td>No Projects</td>
+					<td> - </td>
 					<td> - </td>
 					<td> - </td>
 					<td> - </td>
@@ -60,11 +62,14 @@ Then subscribe them using the following links (anyone already subscribed won't b
 					<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=p.community.slug project_slug=project.slug %}">{{ project.short_title }}</a></td>
 					<td>{% if project.approval_status == project.APPROVED %}Approved{% else %}Pending{% endif %}</td>
 				{% if not applicants %}
-					<td>{% if project.approval_status == project.APPROVED %}No applicants{% else %} - {% endif %}</td>
+					<td> - </td>
+					<td> - </td>
+					<td> - </td>
 				{% else %}
 					<td>{% if project.approval_status == project.APPROVED %}{{ applicants|length }}{% else %} - {% endif %}</td>
-				{% endif %}
 					<td>{% if project.approval_status == project.APPROVED %}{{ project.get_applications|length }}{% else %} - {% endif %}</td>
+					<td>{% if project.approval_status == project.APPROVED %}{{ project.get_withdrawn_applications|length }}{% else %} - {% endif %}</td>
+				{% endif %}
 				</tr>
 			{% endwith %}
 		{% endfor %}
