--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -31,7 +31,7 @@ Outreachy Internships | Apply | Pick a Project
 		<tr><td>{{ current_round.internannounce }}</td><td>Accepted interns announced on <a href"/alums/">the alums page</a> at 4pm UTC</td></tr>
 		<tr><td>{{ current_round.internstarts }} to {{ current_round.internends }}</td><td>Internships period</td></tr>
 	</table>
-	<h2>Payment schedule</h2>
+	<h2>Intern Payment Schedule</h2>
 	<table class=table>
 		<tr><td>{{ current_round.internstarts }}</td><td>Internships starts</td></tr>
 		<tr><td>{{ current_round.initial_stipend_dates.0 }} to {{ current_round.initial_stipend_dates.1 }}</td><td>Interns who have started their internship will receive the $500 initial stipend during this period</td></tr>
