Update instructions for popular communities
For the Linux kernel, it may be better to apply to multiple projects
within that community. For others, you might want to apply to a
different community all together.

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -59,9 +59,10 @@ Outreachy Internships | Apply | Pick a Project
 		will be accepted as an intern, so it's good to not pick too
 		many projects to apply to. At the same time, certain
 		communities like Mozilla, Wikimedia, and the Linux kernel are
-		highly competitive, so if you choose to apply to those
-		projects, make sure to apply to another project as well. We
-		don't recommend applying to more than two projects.
+		highly competitive. If you choose to apply to those
+		communities, make sure to apply to another project
+		within that community or another project in a different community as well.
+		We don't recommend applying to more than two projects.
 		</p>
 		<p>
 		Many people get overwhelmed with the list of projects and don't
