Fix copy-paste bug: foss_experience->relevant_projects

--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -95,7 +95,7 @@ Once you've recorded at least one contribution, you can start your application f
 		<p><i>Your experience with other free software communities:</i></p>
 		<p>{{ final_application.foss_experience }}</p>
 		<p><i>Your relevant personal or class projects that relate to this project:</i></p>
-		<p>{{ final_application.foss_experience }}</p>
+		<p>{{ final_application.relevant_projects }}</p>
 		{% if final_application.community_specific_questions %}
 		<p><i>Answers to community-specific questions:</i></p>
 		<p>{{ final_application.community_specific_questions }}</p>
