Simplify final-application URLs.
The primary key of the FinalApplication object isn't needed because
there's a unique_together constraint on project and applicant, so since
we already have both of those in the request we don't need to
disambiguate further.

However we do have to actually do something with the `username` part of
the path, if present, and set it correctly when necessary.

--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -37,7 +37,7 @@ Once you've recorded at least one contribution, you can start your application f
 {% if contributions %}
 	{% if not final_application %}
 		<h2>Project Application</h2>
-		<p><a class='btn btn-success' href="{% url 'application-actions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug action='submit' username=request.user.username %}">Apply for This Project</a></p>
+		<p><a class='btn btn-success' href="{% url 'application-action' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug action='submit' %}">Apply for This Project</a></p>
 	{% else %}
 		<h2>{{ community.name }} Internship Project Application</h2>
 
