Add instructions for mentors and coordinators to promote their landing pages.

--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -10,6 +10,13 @@ Review Project Applicants
 
 <p>Project: {{ project.short_title }}</p>
 
+{% include 'home/snippet/project_promotion.html' %}
+
+<h2>Applicant Eligibility</h2>
+<p>
+All applicants who are listed on this page have completed an eligibility check, and meet Outreachy's demographics requirements and time requirements eligibility rules. In some cases, their time commitments may be borderline (e.g. just above the number of consecutive days free from full-time commitments). Please review the time commitments section carefully.
+</p>
+
 <p>
 In order for mentors to accept an applicant as an intern,
 that applicant must record at least one contribution to your project
