--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -24,6 +24,7 @@ Past community participation in Outreachy
 	<p>{{ community.name }} is participating in {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.
 	Outreachy provides internships to people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>.
 	The Outreachy organizers have received confirmation for funding of {{ participation_info.interns_funded }} intern{{ participation_info.interns_funded|length|pluralize }}.</p>
+</p>
 {% elif participation_info.approval_status == participation_info.PENDING %}
 	<p>Outreachy organizers are still reviewing this community and/or its funding status, so Outreachy applicants will not be shown the community landing page yet.</p>
 {% else %}
@@ -39,6 +40,13 @@ Past community participation in Outreachy
 	{% endfor %}
 {% else %}
 	<p>This community currently has no approved coordinator. Coordinators approve mentored projects, and communicate with both mentors and Outreachy organizers. The full list of coordinator duties can be found on <a href="/mentor/">here</a>.
+{% endif %}
+
+{% if participation_info.approval_status == participation_info.APPROVED %}
+	<h2>Promoting {{ community.name }} to Outreachy applicants</h2>
+	<p>After the Outreachy round opens on {{ current_round.appsopen }}, you can promote this community to applicants by linking to the community landing page:</p>
+
+	<p><a href="{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}">{{ request.scheme }}://{{ request.get_host }}{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}</a>
 {% endif %}
 
 
