Make CoC prompt check for empty string, not "0".
Getting "0" into this field was a weird artifact of a series of
migrations on a SQLite database, and the squashed migration doesn't do
it. We didn't deploy any of the intermediate migrations on any server so
we're not worried about compatibility with this odd state.

--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -1,4 +1,4 @@
-{% if request.user.comrade and request.user.comrade.agreed_to_code_of_conduct == "0" %}
+{% if request.user.comrade and not request.user.comrade.agreed_to_code_of_conduct %}
 {% include "home/snippet/coc_prompt.html" %}
 {% endif %}
 
