--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -102,6 +102,12 @@ Once you've recorded at least one contribution, you can start your application f
 		{% else %}
 		<p><i>You have not provided answers to community-specific questions. Please double check with your mentor and coordinator if you need to provide additional information.</i></p>
 		{% endif %}
+		{% if final_application.applying_to_gsoc %}
+		<p><i>Google Summer of Code communities and projects you are applying for, and the mentor contact information for those projects:</i></p>
+		<p>{{ final_application.applying_to_gsoc }}</p>
+		{% else %}
+		<p><i>You are not applying to Google Summer of Code.</i></p>
+		{% endif %}
 		<p><i>Timeline of tasks for the internship period:</i></p>
 		<p>{% if final_application.timeline %}{{ final_application.timeline }}{% else %}TBD{% endif %}</p>
 		{% if final_application.approval_status != final_application.WITHDRAWN %}
