--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -148,6 +148,12 @@ that timeline, taking into account any time commitments the applicant has.
 				{% else %}
 				<p><i>Applicant has not provided answers to community-specific questions.</i></p>
 				{% endif %}
+				{% if final_application.applying_to_gsoc %}
+				<p><i>Google Summer of Code communities and projects you are applying for, and the mentor contact information for those projects:</i></p>
+				<p>{{ final_application.applying_to_gsoc }}</p>
+				{% else %}
+				<p><i>You are not applying to Google Summer of Code.</i></p>
+				{% endif %}
 				<p><i>Timeline of tasks for the internship period:</i></p>
 				<p>{% if final_application.timeline %}{{ final_application.timeline }}{% else %}TBD{% endif %}</p>
 			{% else %}
