--- a/home/templates/home/snippet/project_landing_snippet.html
+++ b/home/templates/home/snippet/project_landing_snippet.html
@@ -114,7 +114,7 @@ This community requires applicants to complete a tutorial before they can make t
 {% if project.issue_tracker %}
 	The project uses an <a href="{{ project.issue_tracker }}">issue tracker</a> to keep information about bugs to fix, project features to implement, documentation to write, and more.
 	{% if project.newcomer_issue_tag %}
-		Applicants can look for newcomer-friendly issues to use for their first contributions by looking for the following issue tags in the <a href="">project issue tracker</a>:
+		Applicants can look for newcomer-friendly issues to use for their first contributions by looking for the following issue tags in the <a href="{{ project.issue_tracker }}">project issue tracker</a>:
 		{{ project.newcomer_issue_tag }}
 	{% else %}
 		Applicants will need to contact a mentor to find out how they can make their first contributions to the project.
