--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -148,6 +148,10 @@ that timeline, taking into account any time commitments the applicant has.
 
 		{% with final_application=applicant_contributions.0.get_application %}
 			{% if final_application %}
+				{% if user.is_staff and final_application.spread_the_word != final_application.OTHER %}
+					<p><i>(Organizers only) Applicant found out about Outreachy:</i></p>
+					<p>{{ final_application.get_spread_the_word_display }}</p>
+				{% endif %}
 				<p><i>Their experience with this free software community and project:</i></p>
 				<p>{{ final_application.experience }}</p>
 				<p><i>Their experience with other free software communities:</i></p>
